--- a/index.Rmd
+++ b/index.Rmd
@@ -56,14 +56,14 @@ with(usedPowerConsumption, plot(datetime, Sub_metering_1, type="n", ylab="Energy
 with(usedPowerConsumption, lines(datetime, Sub_metering_1))
 with(usedPowerConsumption, lines(datetime, Sub_metering_2, col="red"))
 with(usedPowerConsumption, lines(datetime, Sub_metering_3, col="blue"))
-legend("topright", bty="n", lty = c(1, 1, 1), col=c("black","red","blue"), legend=c("Sub_metering_1", "Sub_metering_2", "Sub_metering_3"))
+legend("topright", lty = c(1, 1, 1), col=c("black","red","blue"), legend=c("Sub_metering_1", "Sub_metering_2", "Sub_metering_3"))
 ```
 
 ## Plot4
 
 ```{r}
 Sys.setlocale(category = "LC_ALL", locale = "en_US.UTF-8")
-par(mfrow = c(2, 2))
+par(mfrow = c(2, 2), mar=c(4, 4, 2, 1))
 
 # 1
 with(usedPowerConsumption, plot(datetime, Global_active_power, type="l", ylab = "Global Active Power", xlab=""))
